--- a/appsettings.json
+++ b/appsettings.json
@@ -2,6 +2,11 @@
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=future_of_work.db"
   },
+  "Jwt": {
+    "Key": "GS_SOA_FUTUREOFWORKAPI_SUPER_SECRET_KEY_2025",
+    "Issuer": "FutureOfWorkAPI",
+    "Audience": "FutureOfWorkAPIUsers"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
